RESOLVED FIXED 149342
Fix build with --no-indexed-database after r189831
https://bugs.webkit.org/show_bug.cgi?id=149342
Summary Fix build with --no-indexed-database after r189831
Emanuele Aina
Reported 2015-09-18 04:03:07 PDT
r189831 needs a ENABLE(INDEXED_DATABASE) guard around the supportsModernIDB() override.
Attachments
Patch (1.35 KB, patch)
2015-09-18 04:05 PDT, Emanuele Aina
no flags
Emanuele Aina
Comment 1 2015-09-18 04:05:50 PDT
Csaba Osztrogonác
Comment 2 2015-09-18 05:42:17 PDT
Comment on attachment 261497 [details] Patch r=me
WebKit Commit Bot
Comment 3 2015-09-18 06:28:08 PDT
Comment on attachment 261497 [details] Patch Clearing flags on attachment: 261497 Committed r189966: <http://trac.webkit.org/changeset/189966>
WebKit Commit Bot
Comment 4 2015-09-18 06:28:12 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.