Fix build with --no-indexed-database after r189831 https://bugs.webkit.org/show_bug.cgi?id=149342

Patch by Emanuele Aina <emanuele.aina@collabora.com> on 2015-09-18
Reviewed by Csaba Osztrogonác.

* WebProcess/Databases/WebDatabaseProvider.h:
Add ENABLE(INDEXED_DATABASE) guard around supportsModernIDB().

Canonical link: https://commits.webkit.org/167410@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189966 268f45cc-cd09-0410-ab3c-d52691b4dbfc