Source/WebKit2/WebProcess/Databases/WebDatabaseProvider.h
@@ -35,7 +35,9 @@ public:
     static Ref<WebDatabaseProvider> getOrCreate(uint64_t identifier);
     virtual ~WebDatabaseProvider();
 
+#if ENABLE(INDEXED_DATABASE)
     virtual bool supportsModernIDB() const override { return false; }
+#endif
 
 private:
     explicit WebDatabaseProvider(uint64_t identifier);
